fixed faq car background now stretching the full width

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -886,18 +886,18 @@ header {
     width: 100%;
     margin: 0 auto;
     
+    background-image: url('../../images/faq/car.png');
+    background-repeat: no-repeat;
+    background-position: 0 100%;
 
     &__container {
         max-width: $maxWidth;
         padding: 0 2rem;
-        margin: 5rem auto;
+        margin: 3rem auto;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        gap: 5rem;
-        background-image: url('../../images/faq/car.png');
-            background-repeat: no-repeat;
-            background-position: 0 100%;
+        gap: 2rem;
         
         &__heading {
             text-align: center;
@@ -920,7 +920,7 @@ header {
 
         &__questions__container {
             max-width: 50rem;
-            margin: 0 auto;
+            margin: 2rem auto;
             box-shadow: 0 10px 15px 0 rgba(0,0,0,.1);
 
             .question-container {
@@ -969,7 +969,7 @@ header {
                         overflow: hidden;
                         padding: 0 2rem;
                     }
-                    
+
                     &.active {
                         padding: 2rem 0;
                         grid-template-rows: 1fr;
